--- a/example/src/ProgressFoo.mdx
+++ b/example/src/ProgressFoo.mdx
@@ -20,13 +20,13 @@ Just another Progress Bar
 ### With value
 
 <Playground>
-    <ProgressFoo now="33"/>
+    <ProgressFoo now={33}/>
 </Playground>
 
 ### With label
 
 <Playground>
-    <ProgressFoo now="33" label="true"/>
+    <ProgressFoo now={33} label={true} />
 </Playground>
 
 
@@ -35,23 +35,23 @@ Just another Progress Bar
 #### info
 
 <Playground>
-    <ProgressFoo now="66" variant="info"/>
+    <ProgressFoo now={66} variant="info"/>
 </Playground>
 
 #### success
 
 <Playground>
-    <ProgressFoo now="66" variant="success"/>
+    <ProgressFoo now={66} variant="success"/>
 </Playground>
 
 #### warning
 
 <Playground>
-    <ProgressFoo now="66" variant="warning"/>
+    <ProgressFoo now={66} variant="warning"/>
 </Playground>
 
 #### danger
 
 <Playground>
-    <ProgressFoo now="66" variant="danger"/>
+    <ProgressFoo now={66} variant="danger"/>
 </Playground>
